[gd_scene load_steps=26 format=3 uid="uid://b7d0hpqe25dok"]

[ext_resource type="Script" path="res://Primary/Player.gd" id="1_ia1jv"]
[ext_resource type="Texture2D" uid="uid://bgxilmq0g55af" path="res://Assets/Sprites/Main Character/Tamaki.png" id="4_ykp8g"]
[ext_resource type="PackedScene" uid="uid://c1grc52gaavag" path="res://Scenes/GUI/UI.tscn" id="5_0t5jj"]
[ext_resource type="PackedScene" uid="uid://biqkxkd7w60kc" path="res://Scenes/GUI/PauseMenu.tscn" id="7_g8627"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sd5jo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4gao"]
atlas = ExtResource("4_ykp8g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_35774"]
atlas = ExtResource("4_ykp8g")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w005r"]
atlas = ExtResource("4_ykp8g")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mltv2"]
atlas = ExtResource("4_ykp8g")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm23t"]
atlas = ExtResource("4_ykp8g")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m73yu"]
atlas = ExtResource("4_ykp8g")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnlxf"]
atlas = ExtResource("4_ykp8g")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7yxs"]
atlas = ExtResource("4_ykp8g")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjf1"]
atlas = ExtResource("4_ykp8g")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x11xl"]
atlas = ExtResource("4_ykp8g")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfvww"]
atlas = ExtResource("4_ykp8g")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg20m"]
atlas = ExtResource("4_ykp8g")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_roqdb"]
atlas = ExtResource("4_ykp8g")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7dpi"]
atlas = ExtResource("4_ykp8g")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7umx"]
atlas = ExtResource("4_ykp8g")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa4nk"]
atlas = ExtResource("4_ykp8g")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sojkn"]
atlas = ExtResource("4_ykp8g")
region = Rect2(144, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ssl4q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4gao")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35774")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w005r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mltv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm23t")
}],
"loop": true,
"name": &"walkdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m73yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnlxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7yxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjf1")
}],
"loop": true,
"name": &"walkleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x11xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfvww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg20m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roqdb")
}],
"loop": true,
"name": &"walkright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7dpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7umx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa4nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sojkn")
}],
"loop": true,
"name": &"walkup",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5obuq"]
radius = 11.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7wx1p"]
radius = 40.05

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
collision_mask = 542
slide_on_ceiling = false
script = ExtResource("1_ia1jv")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
light_mask = 3
y_sort_enabled = true
shape = SubResource("CapsuleShape2D_sd5jo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -6)
sprite_frames = SubResource("SpriteFrames_ssl4q")
animation = &"walkdown"
frame_progress = 0.500373

[node name="Weapons" type="Node2D" parent="."]

[node name="WeaponDestination" type="Marker2D" parent="Weapons"]
visible = false

[node name="Timers" type="Node2D" parent="."]

[node name="WeaponCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]

[node name="GUI" type="Node2D" parent="."]

[node name="UI" parent="GUI" instance=ExtResource("5_0t5jj")]

[node name="PauseMenu" parent="GUI" instance=ExtResource("7_g8627")]
process_mode = 2
visible = false

[node name="Areas" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="Areas" groups=["PlayerHitbox"]]
visible = false
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/HitBox"]
shape = SubResource("CapsuleShape2D_5obuq")

[node name="TalkArea" type="Area2D" parent="Areas"]
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/TalkArea"]
shape = SubResource("CircleShape2D_7wx1p")

[connection signal="timeout" from="Timers/WeaponCooldown" to="." method="WeaponCooldown"]
[connection signal="area_entered" from="Areas/HitBox" to="." method="PlayerHit"]
